k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-frontend-service
                port:
                  number: 80
          - path: /app/
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80

          - path: /model/
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 80
